# prediction-skill

./: Cargo.toml  README.md  SKILL.md  install.sh
.github/workflows/: release.yml
src/: auth.rs  awp_register.rs  client.rs  main.rs  output.rs  wallet.rs
src/cmd/: admin_chip_feed.rs  cancel.rs  challenge.rs  context.rs  history.rs  loop_worker.rs  mod.rs  orders.rs  preflight.rs  result.rs  set_persona.rs  status.rs  submit.rs  wallet_check.rs
