[package]
name = "predict-agent"
version = "0.12.0"
edition = "2021"
description = "CLI tool for interacting with AWP Predict WorkNet"

[[bin]]
name = "predict-agent"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
k256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
rand = "0.8"
ctrlc = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
